# nix-config

./: .gitignore  Justfile  README.md  devShells.nix  flake.nix  justfile  lib.nix  options.nix
.claude/: settings.json
home/: ai.nix  aider.nix  apps.nix  atuin.nix  base.nix  bat.nix  btop.nix  claude-code.nix  dbeaver.nix  default.nix  delta.nix  dev.nix  editor.nix  fonts.nix  gemini.nix  gh.nix  git.nix  gitmoji.nix  goose.nix  gopass.nix  gpg.nix  gradle.nix  hledger.nix  lazygit.nix  nvim.nix  opnecode.nix  pim.nix  proxychains4.nix  shell.nix  ssh.nix  worktrunk.nix  yazi.nix
homeManagerModules/: default.nix  gstack.nix  hapi-runner.nix  paseo.nix  worktrunk.nix
hosts/: _dict.nix  _lib.nix  _shared.nix  default.nix  yzx9-mbp.nix
modules/: apps.nix  homebrew-mirror.nix  homebrew.nix  host-users.nix  nix-core.nix  nvidia.nix  system-darwin.nix  system-drawin.nix  system-linux.nix
nixosModules/: default.nix  frpc.nix  hapi-hub.nix  paseo-relay.nix
overlays/: aim.nix  claude-code.nix  ctranslate2.nix  default.nix  direnv.nix  goose-cli.nix  goose.nix  gopass.nix  inkscape.nix  packages.nix  python-packages.nix  python-pandas-stubs.nix  stats.nix  terminal-notifier.nix  worktrunk.nix  zotero.nix
scripts/: darwin_proxy.py  ime_switch.sh
secrets/: aider.conf.yml.age  api-key-deepseek.age  api-key-gemini.age  api-key-openrouter.age  api-key-siliconflow.age  api-keys.age  atuin-key.age  atuin-session.age  atuin-sync-address.age  backup-passphrase.age  deepseek-api-key.age  freshrss-pwd.age  (+32 more)
templates/python/: README.md  flake.nix  justfile  pyproject.toml
(+261 files in other folders)
