[project]
name = "my_project"
version = "0.0.1"
description = "New project"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "yzx9", email = "pypi@yzx9.xyz" }]
keywords = []
license = { text = "Apache-2.0" }
dependencies = []

[project.urls]
repository = "https://github.com/yzx9/my_project"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
